fix(backend): minor fixes on user and role relation and login and signin